[gd_scene load_steps=40 format=3 uid="uid://d3rkiow4mjix1"]

[ext_resource type="Script" path="res://bg_background.gd" id="1_8sx5x"]
[ext_resource type="Texture2D" uid="uid://dh18wy8dv4ayl" path="res://assets/bg_0/bg_0_Layer 6.png" id="1_dqtvq"]
[ext_resource type="Texture2D" uid="uid://cu4ec636vdpny" path="res://assets/bg_0/bg_0_Layer 5.png" id="2_impgn"]
[ext_resource type="Texture2D" uid="uid://bxd6ohmdxq1sn" path="res://assets/bg_0/bg_0_Layer 4.png" id="3_f836y"]
[ext_resource type="Texture2D" uid="uid://dv2fkno17vf6i" path="res://assets/bg_3/bg_3_Layer 6.png" id="3_uenpd"]
[ext_resource type="Texture2D" uid="uid://ckx7hg63lnwis" path="res://assets/bg_0/bg_0_Layer 3.png" id="4_4gu0i"]
[ext_resource type="Texture2D" uid="uid://ifx703omnddw" path="res://assets/bg_0/bg_0_Layer 0.png" id="4_5lyj0"]
[ext_resource type="Texture2D" uid="uid://cfon3208hp3td" path="res://assets/bg_3/bg_3_Layer 5.png" id="5_rmn7v"]
[ext_resource type="Texture2D" uid="uid://h0v8jea4xw7w" path="res://assets/bg_0/bg_0_Layer 1.png" id="6_k85vm"]
[ext_resource type="Texture2D" uid="uid://blompltkairrf" path="res://assets/bg_3/bg_3_Layer 4.png" id="7_u433e"]
[ext_resource type="Texture2D" uid="uid://2ha7f8p7rwu4" path="res://assets/bg_3/bg_3_Layer 1.png" id="9_or88s"]
[ext_resource type="Texture2D" uid="uid://ok7lystlcp65" path="res://assets/bg_3/bg_3_Layer 3.png" id="11_vsdmg"]
[ext_resource type="Texture2D" uid="uid://c6wf7e0koq5me" path="res://assets/bg_3/bg_3_Layer 2.png" id="13_o7jxb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j4mk1"]
atlas = ExtResource("1_dqtvq")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x2qo"]
atlas = ExtResource("3_uenpd")
region = Rect2(0, 90, 80, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_yicv8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4mk1")
}],
"loop": true,
"name": &"bg_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x2qo")
}],
"loop": true,
"name": &"bg_3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_57t8b"]
atlas = ExtResource("2_impgn")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwy11"]
atlas = ExtResource("5_rmn7v")
region = Rect2(0, 90, 80, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_tsj0v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57t8b")
}],
"loop": true,
"name": &"bg_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwy11")
}],
"loop": true,
"name": &"bg_3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h40eo"]
atlas = ExtResource("3_f836y")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfv7v"]
atlas = ExtResource("7_u433e")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlj0m"]
atlas = ExtResource("7_u433e")
region = Rect2(0, 45, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_givqs"]
atlas = ExtResource("7_u433e")
region = Rect2(0, 90, 80, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_4bduq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h40eo")
}],
"loop": true,
"name": &"bg_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfv7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlj0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_givqs")
}],
"loop": true,
"name": &"bg_3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tljui"]
atlas = ExtResource("4_5lyj0")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_66f5e"]
atlas = ExtResource("9_or88s")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2v16"]
atlas = ExtResource("9_or88s")
region = Rect2(0, 45, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_ithm1"]
atlas = ExtResource("9_or88s")
region = Rect2(0, 90, 80, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_qwxvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tljui")
}],
"loop": true,
"name": &"bg_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66f5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2v16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ithm1")
}],
"loop": true,
"name": &"bg_3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nqjqv"]
atlas = ExtResource("6_k85vm")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_fur8p"]
atlas = ExtResource("6_k85vm")
region = Rect2(0, 45, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_m782x"]
atlas = ExtResource("6_k85vm")
region = Rect2(0, 90, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ala0"]
atlas = ExtResource("11_vsdmg")
region = Rect2(0, 0, 80, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_bfvcy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqjqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fur8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m782x")
}],
"loop": true,
"name": &"bg_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ala0")
}],
"loop": true,
"name": &"bg_3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5eewa"]
atlas = ExtResource("4_4gu0i")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7ivg"]
atlas = ExtResource("13_o7jxb")
region = Rect2(0, 0, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqcy0"]
atlas = ExtResource("13_o7jxb")
region = Rect2(0, 45, 80, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8k6l"]
atlas = ExtResource("13_o7jxb")
region = Rect2(0, 90, 80, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_0ojoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eewa")
}],
"loop": true,
"name": &"bg_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7ivg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqcy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8k6l")
}],
"loop": true,
"name": &"bg_3",
"speed": 5.0
}]

[node name="bg_background" type="Node2D"]
position = Vector2(40, 22.5)
script = ExtResource("1_8sx5x")

[node name="bg_l6" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yicv8")
animation = &"bg_3"
autoplay = "bg_1"

[node name="bg_l5" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_tsj0v")
animation = &"bg_3"
autoplay = "bg_1"
frame_progress = 0.267476

[node name="bg_l4" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 8)
sprite_frames = SubResource("SpriteFrames_4bduq")
animation = &"bg_3"
autoplay = "bg_1"

[node name="bg_l1" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 10)
sprite_frames = SubResource("SpriteFrames_qwxvl")
animation = &"bg_3"
autoplay = "bg_1"

[node name="bg_l2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 12)
sprite_frames = SubResource("SpriteFrames_bfvcy")
animation = &"bg_3"
autoplay = "bg_1"

[node name="bg_l3" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 12)
sprite_frames = SubResource("SpriteFrames_0ojoy")
animation = &"bg_3"
autoplay = "bg_1"
